--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body {
 .place-search_heading{
     display: flex;
     justify-content: center;
+    flex-wrap: nowrap;
+    flex-grow: 1;
+    flex-basis: 100%;
 }
 .place-search_heading_1{
     margin-left: 100px;
